tests/trybuild/fail/invalid_stack_error_arg.stderr
error: invalid `#[stack_error(foo)]` attribute. expected `std` or `stacked`
 --> tests/trybuild/fail/invalid_stack_error_arg.rs:5:19
  |
5 |     #[stack_error(foo)]
  |                   ^^^
